# envsel

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  environments.json
core/: CMakeLists.txt
core/include/: AbstractDomain.h  Application.h  ApplicationInstallation.h  Directives.h  Domain.h  EnvSelLogging.h  Environments.h  IO.h  Json.h  JsonHelper.h  NonCopyable.h  Project.h  ProjectApp.h  Script.h  ScriptCommand.h  ScriptVariable.h  ToString.h
core/src/: AbstractDomain.cpp  Application.cpp  ApplicationInstallation.cpp  EnvSelLogging.cpp  Environments.cpp  IO.cpp  NonCopyable.cpp  Project.cpp  ProjectApp.cpp  Script.cpp  ScriptCommand.cpp  ScriptVariable.cpp  ToString.cpp
examples/: environments.json
scripts/: envSel.sh
src/: App.cpp  App.h  AppFrame.cpp  AppFrame.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Directives.h  Domain.cpp  Domain.h  EditApplicationPanel.cpp  EditApplicationPanel.h  EditFrame.cpp  EditFrame.h  EnvSelConfig.h.in  EnvSelLogging.cpp  EnvSelLogging.h  EnvironmentSelector.cpp  IO.cpp  IO.h  Main.cpp  Model.cpp  Model.h  NonCopyable.cpp  NonCopyable.h  SelectFrame.cpp  SelectFrame.h  SelectionTab.cpp  SelectionTab.h  ToString.cpp  ToString.h  domain.cpp  domain.h
test/: CMakeLists.txt  ScriptVariableTest.cpp  Test.cpp
test/src/: DomainTest.cpp  DomainTest.h  EnvSelTest.cpp  EnvSelTest.h  ScriptVariableTest.cpp  ScriptVariableTest.h  Test.cpp
ui/: CMakeLists.txt  EnvSel  environments.json
ui/src/: App.cpp  App.h  ArgumentParser.cpp  ArgumentParser.h  Arguments.cpp  Arguments.h  CMakeLists.txt  EditApplicationPanel.cpp  EditApplicationPanel.h  EditFrame.cpp  EditFrame.h  EnvSelConfig.h.in  Main.cpp  Model.h  SelectFrame.cpp  SelectionTab.cpp  SelectionTab.h
